# TallerTPGrupal

./: CMakeLists.txt  README.md
ClientePrueba/: CMakeLists.txt
ClientePrueba/src/: CollisionMap.h  Enemies.cpp  Enemies.h  Game.cpp  Game.h  Hud.cpp  Hud.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Objects.cpp  Objects.h  Player.cpp  Player.h  Raycaster.cpp  SDL_EventHandler.h  SpritesHandler.cpp  SpritesHandler.h  TextHandler.h  Vector.cpp  Vector.h  Walls.h  heal_t.h  main.cpp  weapon_t.h
ClientePrueba/src/aux/: main.cpp
ClientePrueba/src/aux/collisions/: Movable.h
ClientePrueba/src/back up/: Game.cpp  Game.h  Hud.cpp  Hud.h  Map.cpp  Map.h  Objects.cpp  Objects.h  Player.cpp  Player.h  Raycaster.cpp  SDLHandler.cpp  SDL_EventHandler.cpp  SpritesHandler.cpp  SpritesHandler.h  Vector.cpp  Vector.h  Walls.cpp  Walls.h  main.cpp
ClientePrueba/src/back up/collisions/: CMakeLists.txt  CollectHeal.h  CollectWeapon.cpp  Collidable.cpp  Collidable.h  ImmovableWall.h  Quadtree.cpp  Rectangle.h
ClientePrueba/src/back up/inventory/: Inventory.cpp  Inventory.h  PWChainCanon.cpp  PWChainCanon.h  PWGun.cpp  PWGun.h  PWKnife.cpp  PWMachineGun.cpp  PWMachineGun.h  PWRocketLauncher.h  PlayerWeapon.cpp  PlayerWeapon.h
ClientePrueba/src/client_src/: CMakeLists.txt  Enemies.cpp  Enemies.h  FilesHandler.cpp  FilesHandler.h  Game.cpp  Game.h  Hud.cpp  Hud.h  Install.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Missile.cpp  Missile.h  Objects.cpp  Objects.h  Player.cpp  Player.h  Raycaster.h  SDL_EventHandler.cpp  SDL_EventHandler.h  SDL_Sounds.cpp  SDL_Sounds.h  SpritesHandler.cpp  SpritesHandler.h  TextHandler.cpp  Walls.cpp  Walls.h  client.cpp  client.h  clientReceiver.cpp  clientReceiver.h  clientTransmitter.cpp  clientTransmitter.h  gameUpdater.cpp  gameUpdater.h  protectedUpdateQueue.cpp
ClientePrueba/src/client_src/enemies/: ESHHound.h  ESHOfficial.cpp  Enemies.cpp  Enemies.h  EnemySpriteHandler.cpp  EnemySpriteHandler.h
ClientePrueba/src/client_src/inventory/: Inventory.cpp  Inventory.h  PWChainCannon.cpp  PWChainCannon.h  PWGun.cpp  PWGun.h  PWKnife.cpp  PWKnife.h  PWMachineGun.cpp  PWMachineGun.h  PWRocketLauncher.cpp  PWRocketLauncher.h  PlayerWeapon.cpp  PlayerWeapon.h
ClientePrueba/src/collisions/: CollectAmmo.cpp  CollectAmmo.h  CollectHeal.cpp  CollectHeal.h  CollectWeapon.h  Collidable.cpp  ImmovableWall.cpp  QuadNode.h  Quadtree.h  Rectangle.cpp
ClientePrueba/src/common_src/: CMakeLists.txt  Circle.h  Vector.cpp  Vector.h  protectedEventQueue.cpp  protectedQueue.cpp  protectedQueue.h  types.h
ClientePrueba/src/inventory/: CMakeLists.txt  Inventory.cpp  Inventory.h  PWChainCanon.h  PWGun.cpp  PWKnife.h  PWRocketLauncher.cpp  PlayerWeapon.cpp  PlayerWeapon.h
ClientePrueba/src/prueba/: Vector.cpp  Vector.h  main.cpp  makefile  tp
ClientePrueba/src/server_src/: AILua.cpp  AILua.h  AILuaScript.cpp  AILuaScript.h  CMakeLists.txt  CollisionMap.h  ShootingRaycaster.cpp  ShootingRaycaster.h  bot.cpp  bot.h  main.cpp  match.cpp  match.h  matchEventReader.cpp  matchHandler.cpp  matchHandler.h  menuHandler.cpp  menuHandler.h  server.cpp  server.h  serverGame.cpp  serverGame.h  serverPlayer.cpp  serverPlayer.h  serverReceiver.cpp  serverReceiver.h  serverTransmitter.cpp  serverTransmitter.h  svMap.cpp  svRaycaster.cpp  thacceptor.h  updateHandler.cpp  user.cpp  user.h  userHandler.cpp  userHandler.h
ClientePrueba/src/server_src/collisions/: CMakeLists.txt  CollectHeal.cpp  CollectKey.cpp  CollectWeapon.cpp  Collectible.cpp  Collidable.cpp  Collidable.h  Immovable.cpp  Immovable.h  Movable.cpp  Movable.h  MovableDoor.cpp  MovableDoor.h  QuadNode.cpp  Quadtree.cpp  Quadtree.h  Rectangle.h
ClientePrueba/src/server_src/sp_inventory/: SPInventory.cpp  SPInventory.h  SPWChainCannon.cpp  SPWChainCannon.h  SPWGun.cpp  SPWGun.h  SPWKnife.cpp  SPWKnife.h  SPWMachineGun.cpp  SPWMachineGun.h  SPWRocketLauncher.cpp  SPWRocketLauncher.h  SPWeapon.cpp  SPWeapon.h
Editor/: CMakeLists.txt
Editor/Media/Maps/: map1.yaml  map2.yaml
Editor/Media/MenuEditor/: config.yaml
Editor/data/: nivel.yaml
Editor/data/maps/: map1.yaml
Editor/project/: CMakeLists.txt  compilar  install.txt
Editor/project/data/: nivel (copy).yaml  nivel.yaml
Editor/project/src/: Arrow.cpp  Arrow.h  Button.cpp  Button.h  Dot.cpp  Dot.h  Game.cpp  Game.h  Gui.cpp  Gui.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Point.cpp  Point.h  Position.cpp  Position.h  SDLHandler.cpp  SDLHandler.h  Save.cpp  Save.h  Settings.cpp  Settings.h  Textbox.cpp  Textbox.h  Tile.cpp  Tile.h  main.cpp
Editor/src/: Defines.h  Map.cpp  Map.h  Menu.cpp  Menu.h  SDLHandler.cpp  SDLHandler.h  Settings.cpp  Settings.h  TextHandler.cpp  TextHandler.h  Tile.cpp  Tile.h  main.cpp
Game/: CMakeLists.txt
client_src/: client.cpp  client.h  clientReceiver.cpp  clientReceiver.h  clientTransmitter.cpp  clientTransmitter.h
common_src/: receiver.cpp  receiver.h  socket.cpp  socket.h  transmitter.cpp  transmitter.h
server_src/: match.cpp  match.h  matchHandler.cpp  menuHandler.cpp  server.cpp  server.h  serverReceiver.cpp  serverReceiver.h  serverTransmitter.cpp  serverTransmitter.h  thacceptor.cpp  thacceptor.h  threquest.cpp  user.h  (+2 more)
tpIntegrado/ClientePrueba/src/server_src/: CMakeLists.txt  CollisionMap.cpp  CollisionMap.h  ShootingRaycaster.h  match.cpp  match.h  matchHandler.cpp  matchHandler.h  menuHandler.cpp  menuHandler.h  server.cpp  server.h  serverGame.cpp  serverGame.h  serverPlayer.cpp  serverPlayer.h  serverReceiver.cpp  serverReceiver.h  serverTransmitter.cpp  serverTransmitter.h  thacceptor.cpp  updateHandler.cpp  updateHandler.h  user.cpp  user.h
tpIntegrado/ClientePrueba/src/server_src/collisions/: CMakeLists.txt  CollectAmmo.cpp  CollectHeal.cpp  CollectWeapon.cpp  Collectible.cpp  Collectible.h  Collidable.cpp  Collidable.h  QuadNode.cpp  QuadNode.h  Quadtree.cpp  Quadtree.h  Rectangle.h
tpIntegrado/ClientePrueba/src/server_src/sp_inventory/: CMakeLists.txt  SPInventory.cpp  SPInventory.h  SPWChainCannon.cpp  SPWChainCannon.h  SPWGun.cpp  SPWGun.h  SPWKnife.cpp  SPWKnife.h  SPWMachineGun.cpp  SPWMachineGun.h  SPWeapon.cpp  SPWeapon.h
(+217 files in other folders)
